--- a/jishi.html
+++ b/jishi.html
@@ -4,14 +4,14 @@
 </head> 
 <body> 
  <form action="somepage.asp"> 
-<p>Time passed:</p>
+ <input type="text" value="0" name="txt1"/> 
  <input type="button" value="开始" name="btnStart"/> 
  <input type="button" value="重置" name="btnReset"/> 
  </form> 
 </body> 
 </html> 
 <script language="JavaScript" type="text/javascript"> 
-<!-- 
+
 
 var txt=document.forms[0].elements["txt1"]; 
 var btnStart=document.forms[0].elements["btnStart"]; 
@@ -47,5 +47,5 @@ function tip(){
  seed++; 
  txt.value=seed/100; 
 } 
-  
+
 </script>
