--- a/grzy.html
+++ b/grzy.html
@@ -6,7 +6,7 @@
     <title>李昕悦的个人主页</title>
 </head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="页面1.css" type="text/css">
+    <link rel="stylesheet" href="css1.css" type="text/css">
 </head>
 
 <body>
